--- a/home.css
+++ b/home.css
@@ -69,13 +69,13 @@ header {
     cursor: pointer;
     position: fixed;
     top: 0;
-    right: -300px;
+    right: -400px;
     width: 400px;
     font-size: 20px;
 }
 
 .home-index a {
-    color: white;
+    color: black;
     display: inline-block;
     padding-bottom: 20px;
 }
