--- a/home.css
+++ b/home.css
@@ -64,7 +64,7 @@ header {
 .home-index {
     background-color: #999;
     opacity: 0.7;
-    padding: 80px 40px 80px 20px;
+    padding: 80px 40px;
     z-index: 99;
     cursor: pointer;
     position: fixed;
