--- a/home.css
+++ b/home.css
@@ -106,6 +106,7 @@ header {
 .footer-logo {
     display: block;
     margin: 20px auto;
+    height: 400px;
 }
 
 .lists {
@@ -144,10 +145,6 @@ header {
     margin: 15px;
 }
 
-.footer-logo {
-    height: 400px;
-}
-
 .items {
     max-width: 1170px;
     width: 100%;
@@ -181,10 +178,8 @@ header {
 }
 
 .top {
-    padding: 100px 100px 0 100px;
-    margin-top: 50px;
+    padding: 100px 100px 25px 100px;
     text-align: center;
-    padding-bottom: 25px;
     border-bottom: #F6F6E8 solid 12px;
 }
 
