--- a/home.css
+++ b/home.css
@@ -178,7 +178,7 @@ header {
 }
 
 .top {
-    padding: 100px 100px 25px 100px;
+    padding: 25px 100px;
     text-align: center;
     border-bottom: #F6F6E8 solid 12px;
 }
