--- a/home.css
+++ b/home.css
@@ -193,19 +193,19 @@ table {
 }
   
 th, td {
-    padding: 5px 15px;    
+    padding: 5px 15px;
+    vertical-align: baseline;
 }
   
 th {
     width: 400px;
     text-align: right;
-    vertical-align: middle;
 }
   
 td {
     width: 600px;
     text-align: left;
-    vertical-align: 18px;
+    
 }
 
 table, th, td {
