--- a/home.css
+++ b/home.css
@@ -130,6 +130,10 @@ header {
     padding: 0 250px;
 }
 
+.items h2 {
+    padding: 0 0 0 200px;
+}
+
 .top {
     padding: 25px 100px;
     text-align: center;
