--- a/home.css
+++ b/home.css
@@ -132,6 +132,7 @@ header {
 
 .items h2 {
     padding: 0 0 0 200px;
+    font-size: 25px;
 }
 
 .top {
@@ -151,7 +152,7 @@ header {
 
 table {
     width: 1000px;
-    margin: 50px auto;
+    margin: 0 auto;
     font-size: 20px;
 }
   
