--- a/home.css
+++ b/home.css
@@ -39,7 +39,7 @@ header {
 
 .header-left {
     float: left;
-    padding: 10px 20px;
+    padding: 10px 0 0 20px;
 }
 /*--------- ヘッダー ---------*/
 
