--- a/home.css
+++ b/home.css
@@ -148,11 +148,13 @@ header {
     font-size: 50px;
     margin: -20px 0 0 0;
     color: #1e90ff;
+    padding: 0 250px;
 }
 
 .top p {
     font-size: 16px;
-    margin: 0 0 15px
+    margin: 0 0 15px 0;
+    padding: 0 250px;
 }
 
 /* 中身 */
