--- a/home.css
+++ b/home.css
@@ -174,6 +174,10 @@ header {
     width: 400px;
 }
 
+#driver {
+    margin-top: 50px;
+}
+
 table {
     width: 1000px;
     margin: 0 auto;
@@ -193,37 +197,46 @@ th, td {
 th {
     width: 360px;
     text-align: right;
-    padding: 0 10px 0 0;
+    padding: 0 20px 0 0;
 }
   
 td {
     width: 640px;
     text-align: left;
-    padding: 0 0 0 10px;
+    padding: 0 0 0 20px;
 }
 /*--------- 内容 ---------*/
 
 /*--------- メンバー ---------*/
+.member table {
+    padding: 15px;
+}
+
+.member th {
+    padding-bottom: 10px;
+    font-size: 21px;
+}
+
+.member td {
+    font-size: 19px;
+}
+
 .managerColor p {
     background-color: pink;
+    width: 300px;
 }
 
 .memberLeft {
     text-align: right;
+    width: 500px;
+    padding-right: 20px;
 }
 
 .memberRight {
     text-align: left;
+    width: 500px;
+    padding-left: 20px;
 }
-
-#scenarioPl {
-    text-align: right;
-}
-
-#charaPl {
-    text-align: left;
-}
-
 /*--------- メンバー ---------*/
 
 /*--------- ここからslider --------*/
