--- a/home.css
+++ b/home.css
@@ -80,13 +80,7 @@ header {
 }
 
 .li2 {
-    padding: 20px;
-}
-
-.home-index p {
-    background-color: #999;
-    display: block;
-    margin-bottom: 20px;
+    padding-left: 20px;
 }
 
 .home-index a {
