--- a/home.css
+++ b/home.css
@@ -380,6 +380,10 @@ td {
 }
 
 @media (max-width: 599px) {
+    * {
+        font-size: -5px;
+    }
+    
     .top {
         padding: 0 20px;
     }
