--- a/home.css
+++ b/home.css
@@ -381,11 +381,14 @@ td {
 
 @media (max-width: 599px) {
     * {
-        font-size: -5px;
+        font-size: medium;
     }
     
     .top {
         padding: 0 20px;
+    }
+    .title {
+        font-size: 40px;
     }
     
     .slide-wrapper {
