--- a/home.css
+++ b/home.css
@@ -384,9 +384,14 @@ td {
         font-size: medium;
     }
     
+    .home-index a {
+        font-size: 20px;
+    }
+    
     .top {
         padding: 0 20px;
     }
+    
     .title {
         font-size: 40px;
     }
