--- a/home.css
+++ b/home.css
@@ -175,6 +175,10 @@ header {
   width: 120px;
   margin: 0;
 }
+
+.mem p {
+    margin: 0;
+}
 /*--------- ホーム ---------*/
 
 /*--------- キャラ、シナリオ、メンバー ---------*/
