--- a/home.css
+++ b/home.css
@@ -198,6 +198,7 @@ header {
 
 .top p {
     font-size: 16px;
+    margin: 0;
 }
 
 /* 中身 */
@@ -332,26 +333,25 @@ td {
     text-align: center;
 }
 
+.memberLeft {
+    padding: 40px 0 8px 0;
+    margin: 0;
+}
 .managerColor p {
     background-color: pink;
+}
+
+#member-color {
     width: 300px;
+    margin: 0 auto;
+    padding-bottom: 20px;
 }
 
 #manager-icon {
     width: 80px;
 }
 
-.memberLeft {
-    text-align: right;
-    width: 500px;
-    padding-right: 20px;
-}
 
-.memberRight {
-    text-align: left;
-    width: 500px;
-    padding-left: 20px;
-}
 /*--------- メンバー ---------*/
 
 
