--- a/home.css
+++ b/home.css
@@ -128,8 +128,11 @@ header {
 
 .index li {
     list-style: none;
-    padding-bottom: 20px;
     font-size: 20px;
+}
+
+.li1 {
+    padding-top: 10px;
 }
 
 /* 中 */
