--- a/home.css
+++ b/home.css
@@ -201,7 +201,7 @@ header {
 }
 /*--------- ホーム ---------*/
 
-/*--------- キャラ、シナリオ、メンバー ---------*/
+/*--------- キャラ、シナリオ、メンバー共通 ---------*/
 /* タイトル */
 .top {
     z-index: 2;
@@ -242,7 +242,7 @@ header {
 #driver {
     margin-top: 50px;
 }
-/*--------- キャラ、シナリオ、メンバー ---------*/
+/*--------- キャラ、シナリオ、メンバー共通 ---------*/
 
 /*--------- 表 ---------*/
 table {
@@ -351,6 +351,14 @@ td {
 
 .member {
     text-align: center;
+}
+
+.member p {
+    margin: 0;
+}
+
+.comment {
+    padding-top: 1.5em;
 }
 
 .memberLeft {
