--- a/home.css
+++ b/home.css
@@ -163,16 +163,17 @@ header {
 
 .chara {
   border: 1px solid #fffff0;
-  border-radius: 20px;
-  padding: 10px;
+  border-radius: 40px;
+  padding: 15px;
   margin: 5px;
   transition: .2s;
-  width: 100px;
+  width: 130px;
   text-align: center;
+  background-color: #F9F4DF;
 }
 
 .chara:hover {
-    border: 3px solid #ffe9d9;
+    border: 1px solid #ffe9d9;
     background: #FFE9D9;
 }
 
