--- a/home.css
+++ b/home.css
@@ -364,6 +364,12 @@ td {
 }
 /*-------  キャラslider  --------*/
 
+/*-------  キャラ  --------*/
+.status p {
+    margin: 0;
+}
+/*-------  キャラ  --------*/
+
 /*--------- メンバー ---------*/
 .member-url p {
     padding: 0;
