--- a/home.css
+++ b/home.css
@@ -208,19 +208,32 @@ header {
 }
 
 .mem {
-  display: inline-block;
   width: 120px;
   text-align: center;
+  border: 1px solid #fffff0;
+  border-radius: 30px;
+  margin: 5px;
+}
+
+.mem:hover {
+    background-color: #F9F4DF;
 }
 
 .mem img {
+  background-color: transparent;
   width: 120px;
   margin: 0;
 }
 
 .mem p {
-    margin: 0;
+  background-color: transparent;
+  margin: 0;
 }
+
+.mem a {
+  background-color: transparent;
+}
+
 /*--------- ホーム ---------*/
 
 /*--------- キャラ、シナリオ、メンバー共通 ---------*/
