--- a/home.css
+++ b/home.css
@@ -406,6 +406,7 @@ td {
     padding: 40px 0 8px 0;
     margin: 0;
 }
+
 .managerColor p {
     background-color: pink;
     margin: 0;
@@ -417,7 +418,7 @@ td {
     padding-bottom: 20px;
 }
 
-#manager-icon {
+.member-icon {
     width: 80px;
 }
 
