--- a/home.css
+++ b/home.css
@@ -426,6 +426,13 @@ td {
     width: 80px;
 }
 
+.htmlPL {
+    width: 200px;
+}
+
+.cPL img {
+    height: 70px;
+}
 
 /*--------- メンバー ---------*/
 
