--- a/member/member.css
+++ b/member/member.css
@@ -37,6 +37,18 @@
 
 .htmlPL {
     width: 200px;
+    margin: 10px;
+}
+
+.sPL h4 {
+    padding: 0 4px;
+    border: 2px solid #fffff0;
+    border-radius: 15px;
+    box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.2);
+}
+
+.sPL:hover h4 {
+    color: #B0B0FF;
 }
 
 .cPL img {
