--- a/member/member.css
+++ b/member/member.css
@@ -9,6 +9,7 @@
 
 .member p {
     margin: 0;
+    background-color: transparent;
 }
 
 .comment {
@@ -40,6 +41,10 @@
     margin: 10px;
 }
 
+.htmlPL a:hover {
+    text-decoration: none;
+}
+
 .sPL h4 {
     padding: 5px;
     border: 2px solid #E6DAAF;
@@ -52,10 +57,6 @@
     transition: .3s;
     color: #888;
     background-color: #FAF3D7;
-}
-
-.sPL:hover a{
-    text-decoration: none;
 }
 
 .cPL {
@@ -75,14 +76,14 @@
     transform: scale(1.1);
 }
 
-.cPL:hover a{
-    text-decoration: none;
-}
-
 .cPL img {
     padding-top: 5px;
     height: 80px;
+    background-color: transparent;
 }
 
+.cPL:hover img {
+    transform: scale(1.1);
+}
 /*--------- メンバー ---------*/
 
