--- a/home.css
+++ b/home.css
@@ -86,8 +86,16 @@ header {
 
 .menu-li1 li {
     display: inline-block;
-    padding-left: 12px;
+    padding-left: 15px;
     padding-top: 5px;
+}
+
+#pl-blank {
+  padding-top: 10px;
+}
+
+.sentou {
+  padding-left: 10px;
 }
 
 .menu-li2 li{
